@@ -7,7 +7,7 @@
 Team
 ----
 - druhe heslo pro read-only login pro pratele na telefonu
-- zobrazovat tymum jak jsou na tom (jejich poradi) s moznosti toto vypnout v ini souboru
+??? Prestat zobrazovat poradi tymu v zaveru souteze ???
  
 HQ
 --
